<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="45dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="698dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="388dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginBottom="45dp"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="#673AB7"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLector"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/titulo1" />

        <Button
            android:id="@+id/btnFoto"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/titulo2" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>